--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
   "licence": "proprietary",
   "require": {
     "ayeaye/api": "^1.0",
-    "duffleman/lunophp": "@dev"
+    "duffleman/lunophp": "@dev",
+    "maknz/slack": "^1.7",
+    "mhlavac/diacritics-remover": "^1.0"
   },
   "autoload": {
     "psr-4": {
